[package]
name = "rnr-buf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"]}
dialoguer = "0.11.0"
execute = "0.2.13"
tempfile = "3.10.1"
walkdir = "2.5.0"
